--- a/css/sheet1.css
+++ b/css/sheet1.css
@@ -88,8 +88,17 @@ footer {position: fixed; bottom: 0;}
 }
 
 
-
-
+th, td {
+    padding : 10px;
+    text-align: center;
+}
+table {
+    width: 100%;
+}
+th{
+    border-bottom: 1px solid #ddd;
+}
+tr:hover {background-color: #2076bf;}
 
 
 /* Boutons */
